# pico_spdif_rx

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CmakeLists.txt  LICENSE.txt  README.md  Readme.md  spdif_rx.c  spdif_rx.h  spdif_rx.pio  spdif_rx_capture.pio  spdif_rx_detect.pio
.github/workflows/: build-binaries.yml  upload-release-asset.yml
lib/my_pico_audio_i2s/: audio_i2s.c
lib/spdif_rx/: spdif_rx.c  spdif_rx.h  spdif_rx.pio
samples/detect_samp_freq/: CMakeLists.txt  CmakeLists.txt  main.cpp
samples/lib/my_pico_audio_i2s/: audio_i2s.c
samples/lib/my_pico_audio_i2s/include/pico/: audio_i2s.h
samples/lib/pico_audio_i2s_32b/: audio_i2s.c
samples/spdif_to_i2s_32b/: CMakeLists.txt  CmakeLists.txt  README.md  main.cpp
samples/spdif_to_i2s_sr_conv/: main.cpp
scripts/: gen_pio_by_freq.py
spdif_rx/: CMakeLists.txt  spdif_rx.c  spdif_rx.h  spdif_rx.pio
src/: main.cpp
tools/: .gitignore  genWav.py
